1.屏蔽第三方登录 2.增加bin目录兼容rubymine调试工具 3.ui改为momenta 4.修改mapilary版本 5.增加车道线编辑项目

--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -39,7 +39,7 @@
         </label>
         <%= submit_tag t('user.login.login_button'), :tabindex => 4 %>
       </fieldset>
-
+      <% if false %>
       <fieldset class='form-divider'>
 
         <p class='standard-label'><%= t 'user.login.with external' %></p>
@@ -80,7 +80,7 @@
         <%= submit_tag t('user.login.login_button'), :tabindex => 6, :id => "login_openid_submit" %>
 
       </fieldset>
-
+      <%end%>
     </div>
 
   <% end %>
